fix(a11y): add card-level focus outline to prevent overflow:clip hiding focus indicator (blog-page)

--- a/apps/cms-server/modules/asset/ui/src/scss/_news.scss
+++ b/apps/cms-server/modules/asset/ui/src/scss/_news.scss
@@ -20,6 +20,11 @@
     overflow: clip;
     height: 100%;
 
+    &:has(a:focus-visible) {
+      outline: 2px solid var(--utrecht-link-color, #1b4c92);
+      outline-offset: 2px;
+    }
+
     figure {
       height: 200px;
       margin: 0;
